zero-indexed checkin

--- a/index.html
+++ b/index.html
@@ -1,89 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Krishan Patel</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="blog, Krishan Patel, Krishan 91, KS91 Consulting Ltd, KS91, KS91 Consulting, Krishan 91 Consulting Ltd, software developer, software consultant, solihull, west midlands, .net developer, javascript developer, software engineer">
-    <meta property="og:image" content="http://krishan91.com/images/thumbnail.jpg" />
-    <meta property="og:title" content="Krishan Patel" />
+  <head>
+    <title>Zero Indexed Consulting Ltd</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="keywords"
+      content="blog, Krishan Patel, Zero Indexed, zero-indexed, zero indexed consulting ltd, zero indexed consulting, software developer, software consultant, solihull, west midlands, .net developer, javascript developer, software engineer"
+    />
+    <meta
+      property="og:image"
+      content="http://zeroindexed.co.uk/images/thumbnail.jpg"
+    />
+    <meta property="og:title" content="Zero Indexed Consulting" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.krishan91.com" />
-    <meta property="og:description" content="Software Developer open to work opportunities." />
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
-</head>
+    <meta property="og:url" content="http://www.zeroindexed.co.uk" />
+    <meta
+      property="og:description"
+      content="Software Consultancy open to work opportunities."
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <div class="navbar container">
-            <a id="author-name" class="alignable pull-left" href="http://krishan91.com/">Krishan Patel</a>
-            <ul class="alignable pull-right navbar-ul">
-                <li class="alignable pull-right nav-list"><a href="mailto:k.patel91@gmail.com" target="blank">Email</a>
-                </li>
-                <li class="alignable pull-right nav-list"><a href="http://linkedin.com/in/kpatel91" target="blank">LinkedIn</a>
-                </li>
-                <li class="alignable pull-right nav-list"><a href="https://github.com/kpatel91" target="blank">Github</a>
-                </li>
-            </ul>
-            <span class="alignable pull-left skills-bar">
-                .NET CORE – MVC 5 / WEB API 2 – JAVASCRIPT ES7 – REACT – REDUX – TYPESCRIPT – SQL SERVER 2016 – AWS – TDD
-            </span>
-        </div>
-        <div style="clear:both"></div>
+      <div class="navbar container">
+        <a
+          id="author-name"
+          class="alignable pull-left"
+          href="http://zeroindexed.co.uk/"
+          >Zero Indexed Consulting</a
+        >
+        <ul class="alignable pull-right navbar-ul">
+          <li class="alignable pull-right nav-list">
+            <a href="mailto:k.patel91@gmail.com" target="blank">Email Us</a>
+          </li>
+          <li class="alignable pull-right nav-list">
+            <a href="http://linkedin.com/in/kpatel91" target="blank"
+              >LinkedIn</a
+            >
+          </li>
+          <li class="alignable pull-right nav-list">
+            <a href="https://medium.com/@zeroindexed" target="blank">Blog</a>
+          </li>
+        </ul>
+        <span class="alignable pull-left skills-bar">
+          .NET CORE – MVC 5 / WEB API 2 – JAVASCRIPT ES7 – REACT – REDUX –
+          TYPESCRIPT – SQL SERVER 2017 – AWS – TDD
+        </span>
+      </div>
+      <div style="clear:both"></div>
 
-        <div class="container content">
-            <h2 id="about-me">About Me</h2>
-            <p><img class="profile-picture" src="./pic.jpg" /></p>
-            <p>I am a full-stack .NET/JavaScript developer and consultant in software delivery.</p>
-            <p>I have spent three years working in the wealth management sector, and a further two on e-commerce platforms, working primarily within the .NET space, with both strong modern front-end and server-side skills.</p>
-            <p>Currently enjoying building solutions with .NET Core and React, and using AWS and Docker to scale accordingly.</p>
-            <p>Interested in seeking different opportunities to provide value through high quality software, please do not hesistate
-                to contact me regarding any potential work or freelance projects.</p>
-            <h2 id="employment-history">Employment History</h2>
-            <h3>D2 Interactive - Senior Software Developer (Mar 2017 - Present)</h3>
-            <p>Providing consultancy services to enhance, refactor and scale a successful and growing booking platform (used by some of the most recognizable names in the hotel industry) to further its reach into the global hospitality market, and to help grow a blossoming luxury fashion e-commerce store into a modern, responsive and highly-available application. </p>
-            <p>Utilised a range of cutting-edge, modern technologies, including .NET Core, React, SQL Server 2017 and Redis, all hosted on Amazon Web Services, as well as implementing Continuous Delivery pipelines, zero-downtime deployments, elastic load-balancing and other software-delivery best practices.</p>
-            <p>Working closely with third parties to integrate new payment platforms, accounting software and Salesforce CRM into newly defined business processes</p>   
-            <p><strong>Skills Utilised:</strong></p>
-              <ul>
-                <li>.NET Core / MVC 5</li>
-                <li>ReactJS / TypeScript / D3.JS / jQuery</li>
-                <li>SQL Server 2016 / MySQL</li>
-                <li>AWS - EC2 - ECS - ElasticBeanstalk</li>
-                <li>Docker</li>
-                <li>Azure Devops</li>
-            </ul>
-            <h3>Investec Wealth & Investment - Analyst Programmer (Feb 2014 - Feb 2017)</h3>
-            <p>Interestingly varied role working in multi-disciplined teams in both Iterative Waterfall and SCRUM projects,
-                developing attractive and functional internal business applications as well as reliable, stable API's to
-                power our new external client-facing offerings.</p>
-            <p>Attained business knowledge and commercial awareness in the Wealth Management sector, liaising with stakeholders
-                from across all areas of the business, and acting as a mentor for newer developers.</p>
-            <p><strong>Skills Utilised:</strong></p>
-            <ul>
-                <li>.NET web development including ASP.NET (C#/VB) and ASP MVC5</li>
-                <li>REST and SOAP APIs with Web API and WCF</li>
-                <li>JavaScript, jQuery, TypeScript, Angular 1/2, ES6</li>
-                <li>SQL Server 2014</li>
-                <li>PICK / UniVerse DB</li>
-                <li>Data manipulation and report generation</li>
-                <li>Legacy system support including VB6, Web Forms and Classic ASP</li>
-            </ul>
-            <h3>Capita IT Professional Services - Software Developer (Jun 2013 - Feb 2014)</h3>
-            <p>Part of the Novus Graduate Scheme, learning a variety of technologies but specialising in .NET development, SQL
-                Server, and even experimenting with earlier stages of Azure for cloud development.</p>
-            <p>Team lead for a project to develop an iOS + Android app, for the entire SDLC. Project went from inception to
-                production in four months, ahead of estimates.</p>
-            <p><strong>Skills Utilised:</strong></p>
-            <ul>
-                <li>.NET console development</li>
-                <li>ASP.NET MVC 4</li>
-                <li>HTML5 / CSS3</li>
-                <li>Android / iOS</li>
-            </ul>
+      <div class="container content">
+        <div>
+          <p><img class="profile-picture" src="./logo.png" /></p>
+
+          <h2 id="about-me">Krishan Patel - Director & Principal Engineer</h2>
+          <p>
+            I am a full-stack .NET/JavaScript Developer and Consultant in the
+            software delivery world.
+          </p>
+          <p>
+            I have spent three years working in the wealth management sector,
+            and a further three in e-commerce, as well as building a variety of
+            smaller projects, hosted on cloud technologies.
+          </p>
+          <p>
+            Currently enjoying building solutions for clients with .NET Core and
+            React, and using AWS and Docker to scale accordingly.
+          </p>
+          <p>
+            Interested in seeking different opportunities to provide business
+            value through high quality software, please do get in touch about
+            your project - let's build something great!
+          </p>
         </div>
-        <footer>Krishan Patel - Full Stack Developer - .NET/JavaScript</footer>
+        <div>
+          <h2 id="employment-history">Previous Projects</h2>
+          <h3>D2 Interactive (Mar 2017 - Present)</h3>
+          <h4>Xupes (Nov 2018 - Feb 2020)</h4>
+          <h4>BookingTek (Mar 2017 - Oct 2018)</h4>
+          <p>
+            Providing consultancy services to enhance, refactor and scale a
+            successful and growing booking platform (used by some of the most
+            recognizable names in the hotel industry) to further its reach into
+            the global hospitality market, and to help grow a blossoming luxury
+            fashion e-commerce store into a modern, responsive and
+            highly-available application.
+          </p>
+          <p>
+            Utilised a range of cutting-edge, modern technologies, including
+            .NET Core, React, SQL Server 2017 and Redis, all hosted on Amazon
+            Web Services, as well as implementing Continuous Delivery pipelines,
+            zero-downtime deployments, elastic load-balancing and other
+            software-delivery best practices.
+          </p>
+          <p>
+            Working closely with third parties to integrate new payment
+            platforms, accounting software and Salesforce CRM into newly defined
+            business processes
+          </p>
+          <p><strong>Skills Utilised:</strong></p>
+          <ul>
+            <li>.NET Core / MVC 5</li>
+            <li>ReactJS / TypeScript / D3.JS / jQuery</li>
+            <li>SQL Server 2016 / MySQL</li>
+            <li>AWS - EC2 - ECS - ElasticBeanstalk</li>
+            <li>Docker</li>
+            <li>Azure Devops</li>
+          </ul>
+          <h3>
+            Investec Wealth & Investment (Feb 2014 - Feb 2017)
+          </h3>
+          <p>
+            Interestingly varied role working in multi-disciplined teams in both
+            Iterative Waterfall and SCRUM projects, developing attractive and
+            functional internal business applications as well as reliable,
+            stable API's to power our new external client-facing offerings.
+          </p>
+          <p>
+            Attained business knowledge and commercial awareness in the Wealth
+            Management sector, liaising with stakeholders from across all areas
+            of the business, and acting as a mentor for newer developers.
+          </p>
+          <p><strong>Skills Utilised:</strong></p>
+          <ul>
+            <li>.NET web development including ASP.NET (C#/VB) and ASP MVC5</li>
+            <li>REST and SOAP APIs with Web API and WCF</li>
+            <li>JavaScript, jQuery, TypeScript, Angular 1/2, ES6</li>
+            <li>SQL Server 2014</li>
+            <li>PICK / UniVerse DB</li>
+            <li>Data manipulation and report generation</li>
+            <li>
+              Legacy system support including VB6, Web Forms and Classic ASP
+            </li>
+          </ul>
+          <h3>
+            Capita IT Professional Services (Jun 2013 - Feb 2014)
+          </h3>
+          <p>
+            Specialising in .NET development, SQL Server, and experimenting with
+            earlier stages of Azure for cloud development.
+          </p>
+          <p>
+            Team lead for a project to rapidly develop a iOS + Android app, for
+            the entire SDLC. Project went from inception to production in five
+            months, ahead of estimates.
+          </p>
+          <p><strong>Skills Utilised:</strong></p>
+          <ul>
+            <li>.NET console development</li>
+            <li>ASP.NET MVC 4</li>
+            <li>HTML5 / CSS3</li>
+            <li>Android / iOS</li>
+          </ul>
+        </div>
+      </div>
+      <footer>
+        Zero Indexed Consulting Ltd - UK Software Consultancy - Specialists in
+        Web and Mobile
+      </footer>
     </div>
-</body>
+  </body>
+</html>
